--- a/index.html
+++ b/index.html
@@ -205,6 +205,8 @@ Error message and password prompt
 
 <li>Homework 5 2019</li>
 
+<li>Homework 5 2021</li>
+
 <li>Homework 6 2019</li>
 
 <li>Homework 7 2019</li>
@@ -10294,7 +10296,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20211027155204500" list="Home" modified="20211027155342900" title="$:/StoryList">
+<div created="20211027213255800" list="Home" modified="20211027215459300" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20201030185022857" modified="20201030185022857" title="$:/theme">
@@ -10794,12 +10796,13 @@ Additional notes have been uploaded (complex read):
 
 {{TableOfContents}}</pre>
 </div>
-<div created="20201123235906857" modified="20211020042840500" tags="" title="Homework">
+<div created="20201123235906857" modified="20211027215436300" tags="" title="Homework">
 <pre>!!!! Homeworks
 * [[Homework 1|Homework 1 2021]]. Due on September 29, 2021. Solutions: [ext[1.3|files/hwk_sol_1-3.pdf]].
 * [[Homework 2|Homework 2 2021]]. Due on October 6, 2021. Solutions: [ext[2.1|files/hwk_sol_2-1.pdf]], [ext[2.2|files/hwk_sol_2-2.pdf]], [ext[2.3|files/hwk_sol_2-3.pdf]].
 * [[Homework 3|Homework 3 2021]]. Due on October 13, 2021. Solutions: [ext[3.1|files/hwk_sol_3-1.pdf]], [ext[3.2|files/hwk_sol_3-2.pdf]], [ext[3.3|files/hwk_sol_3-3.pdf]], [ext[3.4|files/hwk_sol_3-4.pdf]].
-* [[Homework 4|Homework 4 2021]]. Due on October 20, 2021.</pre>
+* [[Homework 4|Homework 4 2021]]. Due on October 20, 2021.
+* [[Homework 5|Homework 5 2021]]. Due on November 10, 2021.</pre>
 </div>
 <div created="20201124000014789" modified="20201124000053683" title="Homework 1 2019">
 <pre>''Due Monday, September 23, 2019''
@@ -11262,6 +11265,28 @@ $$
 \sum_{k} \frac{k_{B}T}{\sigma k^{2}} \left( 1 - \cos k(x-x') \right).
 $$
 </pre>
+</div>
+<div created="20211027213402900" modified="20211027215424700" title="Homework 5 2021">
+<pre>''Due Wednesday, November 10, 2021''
+
+!!!! Question 1
+Calculate the dielectric constant of a gas of electric dipoles such as the one shown in the [img width=400px [http://homepages.spa.umn.edu/~vinals/tspot_files/phys5201/2017/dipole_schematic.png]] figure. The molecule has a permanent electric dipole $$\mu$$, and in spherical coordinates its energy, that includes rotational kinetic energy and interaction energy with the imposed electric field $$E$$, is given by, $$
+E = \frac{p_{\theta}^{2}}{2I} + \frac{p_{\phi}^{2}}{2I \sin^{2} \theta} - \mu E \cos \theta,
+$$
+where $$\phi \in [0,2\pi], \; \theta \in [0,\pi]$$ are the azimuthal and polar angles, and $$p_{\theta}$$ and $$p_{\phi}$$ their conjugate momenta. $$I$$ is the moment of inertia of the molecule.
+
+# Show that the single particle partition function at constant $$T$$ is given by, $$ 
+Z_{1} = \frac{8 \pi^{2} I}{\beta^{2} h^{2} \mu E} \sinh (\beta \mu E),
+$$ where $$h$$ is Planck's constant and $$\beta = 1/k_{B}T$$.
+# The polarization per unit volume of $$N$$ dipoles is given by a thermal average over dipole orientations, and is defined as $$
+P = \frac{N}{V} \langle \mu \cos \theta \rangle.
+$$ Show that $$
+P = \frac{Nk_{B}T}{V} \frac{\partial \ln Z_{1}}{\partial E}.
+$$
+# Given the partition function just computed, show that $$
+P = \frac{N}{V} \left( \mu \coth (\beta \mu E) - \frac{k_{B}T}{E} \right)
+$$
+# The dielectric constant of such as gas $$\epsilon$$ is related to the polarization $$\epsilon E = \epsilon_{0} E + P$$, where $$\epsilon_{0}$$ is the dielectric constant in vacuum. Find the expression for the dielectric constant $$\epsilon$$ at small field amplitudes. Recall $$\coth x \approx 1/x + x/3 + \ldots$$ for small $$x$$.</pre>
 </div>
 <div created="20201124000617313" modified="20201124000707907" title="Homework 6 2019">
 <pre>''Due Monday, November 18, 2019''
