Added notes on functional integration

--- a/index.html
+++ b/index.html
@@ -10296,7 +10296,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20211105195718400" list="Home" modified="20211105195728200" title="$:/StoryList">
+<div created="20211105201642900" list="Home" modified="20211105201647900" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20201030185022857" modified="20201030185022857" title="$:/theme">
@@ -11476,9 +11476,10 @@ where $\alpha$ and $\beta$ stand for either longitudinal $l$, or transverse $t$ 
 <pre>* [[Animations and Simulations]]
 * [[Supplementary Reading]]</pre>
 </div>
-<div created="20201124001457195" modified="20211105195826500" title="Supplementary Reading">
+<div created="20201124001457195" modified="20211105201753700" title="Supplementary Reading">
 <pre>!!!! Supplementary class notes
 * [[Functional Derivatives|http://homepages.spa.umn.edu/~vinals/tspot_files/phys8702/2016/Functional_Derivatives.pdf]]. The first set of pages is from Arken, &quot;Mathematical Methods for Physicists&quot;. The second, equivalent, but with a slightly different language is from Chaikin and Lubensky, &quot;Principles of Condensed Matter Physics&quot;.
+* [ext[Functional Integration|files/func_int.pdf]], by [[Hagen Kleinert|https://hagenkleinert.de/]].
 !!!! Media
 * [[Boltzmann's Entropy Equation: A History from Clausius to Planck|https://m.youtube.com/watch?feature=youtu.be&amp;v=Tr_gv5CKB1Y]]. Boltzmann entropy law and Boltzmann's constant are in fact due to Planck. A related, historical [[account|https://iopscience.iop.org/article/10.1088/2058-7058/13/12/34/meta]].
 !!!! Print
