--- a/index.html
+++ b/index.html
@@ -209,6 +209,8 @@ Error message and password prompt
 
 <li>Homework 6 2019</li>
 
+<li>Homework 6 2021</li>
+
 <li>Homework 7 2019</li>
 
 <li>Homework 8 2019</li>
@@ -10296,7 +10298,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20211105201642900" list="Home" modified="20211105201647900" title="$:/StoryList">
+<div created="20211111185632800" list="Home" modified="20211111185708100" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20201030185022857" modified="20201030185022857" title="$:/theme">
@@ -10796,13 +10798,14 @@ Additional notes have been uploaded (complex read):
 
 {{TableOfContents}}</pre>
 </div>
-<div created="20201123235906857" modified="20211027223103400" tags="" title="Homework">
+<div created="20201123235906857" modified="20211111185657500" tags="" title="Homework">
 <pre>!!!! Homeworks
 * [[Homework 1|Homework 1 2021]]. Due on September 29, 2021. Solutions: [ext[1.3|files/hwk_sol_1-3.pdf]].
 * [[Homework 2|Homework 2 2021]]. Due on October 6, 2021. Solutions: [ext[2.1|files/hwk_sol_2-1.pdf]], [ext[2.2|files/hwk_sol_2-2.pdf]], [ext[2.3|files/hwk_sol_2-3.pdf]].
 * [[Homework 3|Homework 3 2021]]. Due on October 13, 2021. Solutions: [ext[3.1|files/hwk_sol_3-1.pdf]], [ext[3.2|files/hwk_sol_3-2.pdf]], [ext[3.3|files/hwk_sol_3-3.pdf]], [ext[3.4|files/hwk_sol_3-4.pdf]].
 * [[Homework 4|Homework 4 2021]]. Due on October 20, 2021. Solutions: [ext[4.1|files/hwk_sol_4-1.pdf]], [ext[4.2|files/hwk_sol_4-2.pdf]].
-* [[Homework 5|Homework 5 2021]]. Due on November 3, 2021.</pre>
+* [[Homework 5|Homework 5 2021]]. Due on November 3, 2021.
+* [[Homework 6|Homework 6 2021]]. Due on November 17, 2021.</pre>
 </div>
 <div created="20201124000014789" modified="20201124000053683" title="Homework 1 2019">
 <pre>''Due Monday, September 23, 2019''
@@ -11379,6 +11382,87 @@ You will need the following two results: $$
 \frac{1}{2 \pi} \int_{0}^{2 \pi} d \phi e^{i z \cos \phi} = J_{0}(z),
 $$
 the Bessel function of order zero. Its asymptotic behavior as $z \rightarrow \infty$ is
+$$
+J_{0}(z) \sim \sqrt{\frac{2}{\pi z}}
+$$
+</pre>
+</div>
+<div created="20211111185720700" modified="20211111191855600" title="Homework 6 2021">
+<pre>''Due Wednesday, November 17, 2021''
+
+!!!! Question 1. Analysis of a one dimensional, fluctuating interface.
+The energy of a one dimensional fluctuating line is proportional to its length,
+$$
+E \simeq \sigma L_{0} + \frac{\sigma}{2}\int_{0}^{L_{0}} dx \left( 
+\frac{dh}{dx} \right)^{2},
+$$
+where $$\sigma$$ is the interfacial tension, $$L_{0}$$ is the length of the unstretched line, and $$h(x)$$ is its normal displacement away from planarity. By defining a Fourier series as,
+$$
+h(x) =  \frac{1}{\sqrt{L_{0}}} \sum_{k} \eta_{k} e^{ikx} \quad \textrm{with}
+\quad
+\eta_{k} = \frac{1}{\sqrt{L_{0}}} \int_{0}^{L_{0}} dx h(x) e^{-ikx} 
+$$
+show that
+$$
+E = \sigma L_{0} + \frac{\sigma}{2} \sum_{k} k^{2} |\eta_{k}|^{2}.
+$$
+Energy equipartition implies that for each quadratic mode in the energy, one has in thermal equilibrium
+$$
+\frac{\sigma}{2} k^{2} \langle  |\eta_{k}|^{2} \rangle = \frac{1}{2}  k_{B}T,
+$$
+where $$k_{B}$$ is Boltzmann's constant, and $$T$$ the temperature. By using this result, show that
+$$
+\langle \left( h(x) - h(x') \right)^{2} \rangle = \frac{2}{L_{0}}
+\sum_{k} \frac{k_{B}T}{\sigma k^{2}} \left( 1 - \cos k(x-x') \right).
+$$
+
+!!!! Question 2. Real space correlation function
+Consider the Fourier transform of a correlation function to be
+$$
+\hat{G}(q) = \frac{k_{B}T/K}{q^{2} + \xi^{-2}} \; ,
+$$
+where all parameters are constant. We wish to determine inverse Fourier transform to find $$G(x)$$ in $$d$$ dimensions ($$x$$ is a d dimensional vector)
+$$
+G(x) = \int \frac{d^{d}q}{(2 \pi)^{d}} e^{i q \cdot x} \hat{G}(q).
+$$
+
+# First, show that $$
+\nabla^{2} G(x) = - \frac{k_{B}T}{K} \delta (x) + \xi^{-2} G(x).
+$$ This equation is known as the Helmholtz equation.
+# To solve this equation, we first note that the solution is spherically symmetric, so that the Laplacian in $$d$$ dimensions reduces to $$
+\nabla^{2} = \frac{d^{2}}{dr^{2}} + \frac{d-1}{r} \frac{d}{dr},$$ where $$r$$ is the radial coordinate in $$d$$ dimensions. At long distances $$r \gg 1$$ (so that $$\delta (x)$$ can be taken as zero), show that the solution is $$
+I(r) \sim \frac{e^{-r/\xi}}{r^{p}},
+$$ where we have defined $$G(r) = - (k_{B}T/K) I(r)$$.
+# Requiring that $$I(r)$$ be a solution of the $$d$$-dimensional Helmholtz equation in the limit $$r \gg 1$$ determines the value of the exponent $$p$$. Give the expression for $$p$$ in two cases: (a) $$r, \xi \rightarrow \infty$$ but $$r/\xi \ll 1$$ and (b) $$r \gg \xi$$.
+
+!!!! Question 3. Correlation function of the XY model in two dimensions. 
+Consider a set of spins on a two dimensional plane such that they can have a continuous distribution of orientations $$\vec{S}(\vec{r}) = S_{0}(\cos \theta(\vec{r}), \sin \theta(\vec{r}))$$, with $$S_{0}$$ a constant, and $$\theta \in (0, 2 \pi)$$ is the orientation of the spin located at $$\vec{r}$$. The energy of a given distribution of spins is given in the continuum limit by $$
+E = \frac{\rho_{s}}{2} \int d^{2}r \left( \nabla \theta \right)^{2},$$
+with $$\rho_{s}$$ a known constant.
+
+# The order parameter for this system is $$\psi = S_{0} e^{i \theta}$$, and we wish to calculate its correlation function: $$
+G(\vec{r}) = \langle \psi^{*}(0) \psi(\vec{r}) \rangle.
+$$ Given that the energy is quadratic in $$\theta$$, the angle $$\theta$$ is Gaussianly distributed. By using the expression for the average of the exponential of a Gaussian variable (Eq. (2.50) in the class notes), $$
+\langle e^{i \vec{g}\cdot\vec{u}} \rangle = e^{-\frac{1}{2}\langle (\vec{g}  \cdot \vec{u})^{2} \rangle},
+$$ show that $$
+G(\vec{r}) = S_{0}^{2} e^{- \left( \langle \theta^{2} \rangle - \langle
+\theta(0) \theta(\vec{r}) \rangle \right) }
+$$
+# Given the energy of the spin configurations above, show that $$
+\left( \langle \theta^{2} \rangle - \langle \theta(0) \theta(\vec{r}) \rangle \right) = \frac{k_{B}T}{\rho_{s}} \int 
+\frac{d^{2}k}{(2\pi)^{2}} \frac{1-e^{i \vec{k}\cdot\vec{r}}}{k^{2}}.
+$$
+
+# In order to compute the resulting integral, introduce polar variables on the $$\vec{k}$$ plane, and show that at long distances $$\Lambda r \gg 1$$, where $$\Lambda$$ is a high wavenumber cut-off, $$
+G(r) = \frac{S_{0}^{2}}{r^{\eta}}, \quad {\rm with} \quad \eta =
+\frac{k_{B}T}{ 2 \pi \rho_{s}}.
+$$
+
+!!!! Note:
+You will need the following two results: $$
+\frac{1}{2 \pi} \int_{0}^{2 \pi} d \phi e^{i z \cos \phi} = J_{0}(z),
+$$
+the Bessel function of order zero. Its asymptotic behavior as $$z \rightarrow \infty$$ is
 $$
 J_{0}(z) \sim \sqrt{\frac{2}{\pi z}}
 $$
