--- a/index.html
+++ b/index.html
@@ -10298,7 +10298,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20211111185632800" list="Home" modified="20211111185708100" title="$:/StoryList">
+<div created="20211111185632800" list="Home" modified="20211111192027900" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20201030185022857" modified="20201030185022857" title="$:/theme">
@@ -10798,13 +10798,13 @@ Additional notes have been uploaded (complex read):
 
 {{TableOfContents}}</pre>
 </div>
-<div created="20201123235906857" modified="20211111185657500" tags="" title="Homework">
+<div created="20201123235906857" modified="20211111192115500" tags="" title="Homework">
 <pre>!!!! Homeworks
 * [[Homework 1|Homework 1 2021]]. Due on September 29, 2021. Solutions: [ext[1.3|files/hwk_sol_1-3.pdf]].
 * [[Homework 2|Homework 2 2021]]. Due on October 6, 2021. Solutions: [ext[2.1|files/hwk_sol_2-1.pdf]], [ext[2.2|files/hwk_sol_2-2.pdf]], [ext[2.3|files/hwk_sol_2-3.pdf]].
 * [[Homework 3|Homework 3 2021]]. Due on October 13, 2021. Solutions: [ext[3.1|files/hwk_sol_3-1.pdf]], [ext[3.2|files/hwk_sol_3-2.pdf]], [ext[3.3|files/hwk_sol_3-3.pdf]], [ext[3.4|files/hwk_sol_3-4.pdf]].
 * [[Homework 4|Homework 4 2021]]. Due on October 20, 2021. Solutions: [ext[4.1|files/hwk_sol_4-1.pdf]], [ext[4.2|files/hwk_sol_4-2.pdf]].
-* [[Homework 5|Homework 5 2021]]. Due on November 3, 2021.
+* [[Homework 5|Homework 5 2021]]. Due on November 3, 2021. Solutions: [ext[5.1|files/hwk_sol_5-1.pdf]], [ext[5.2|files/hwk_sol_5-2.pdf]], [ext[5.3|files/hwk_sol_5-3.pdf]].
 * [[Homework 6|Homework 6 2021]]. Due on November 17, 2021.</pre>
 </div>
 <div created="20201124000014789" modified="20201124000053683" title="Homework 1 2019">
