Final exam venue

--- a/index.html
+++ b/index.html
@@ -10298,7 +10298,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20211111185632800" list="Home" modified="20211111192027900" title="$:/StoryList">
+<div created="20211111224745100" list="Home" modified="20211111224904400" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20201030185022857" modified="20201030185022857" title="$:/theme">
@@ -11574,7 +11574,7 @@ where $\alpha$ and $\beta$ stand for either longitudinal $l$, or transverse $t$ 
 * [[One or two small points in thermodynamics|https://arxiv.org/abs/2003.03800]], by Walter F. Wreszinski. 
 * [[Local pressure for inhomogeneous fluids|https://arxiv.org/abs/2008.11709]]. Jim Dufty et al. August 2020. Discusses differences and equivalence between local thermodynamics pressure and pressure through hydrodynamics stress.</pre>
 </div>
-<div created="20201123235841562" modified="20211013174445300" title="Syllabus">
+<div created="20201123235841562" modified="20211111224839800" title="Syllabus">
 <pre>!!Course Information
 ''Instructor:'' Jorge Vi&amp;ntilde;als &lt;br&gt;
 ''Office:'' Tate Hall 130-17 &lt;br&gt;
@@ -11588,7 +11588,7 @@ where $\alpha$ and $\beta$ stand for either longitudinal $l$, or transverse $t$ 
 ''Class web site: '' https://z.umn.edu/phys5201
 
 !!Exams and Final
-There will be an in-class mid term exam (''October 22, 2021, 11:15 a.m. - 12:05 p.m''), and one final exam (''December 22, 2021. 1:30 p.m. - 4:30 p.m.''). There will be several homework assignments during the semester. Typically, the homework will be due one week after being assigned, and may include reading of relevant material. There will be reduced credit for late homeworks: 75% for up to one week late, 50% for up to two weeks late. No credit after that. 
+There will be an in-class mid term exam (''October 22, 2021, 11:15 a.m. - 12:05 p.m''), and one final exam (''December 22, 2021. 1:30 p.m. - 4:30 p.m. Tate Hall 110''). There will be several homework assignments during the semester. Typically, the homework will be due one week after being assigned, and may include reading of relevant material. There will be reduced credit for late homeworks: 75% for up to one week late, 50% for up to two weeks late. No credit after that. 
 
 !!Required Materials
 There is ''no'' required textbook for this class. The class will closely follow a set of notes available online.  The following textbooks cover essentially equivalent material and provide supplementary information.
