--- a/index.html
+++ b/index.html
@@ -10298,7 +10298,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20211111224745100" list="Home" modified="20211111224904400" title="$:/StoryList">
+<div created="20211112162249600" list="Home" modified="20211112162249600" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20201030185022857" modified="20201030185022857" title="$:/theme">
@@ -10717,7 +10717,7 @@ and now the kinetic evolution at different levels of resolution
 * [[Chapter 6: Surface fluctuations|Animations - Chapter 6]].
 * [[Chapter 8: Phase transitions and critical phenomena|Animations - Chapter 8]].</pre>
 </div>
-<div created="20201124000927970" modified="20211027155320600" tags="" title="Class Notes">
+<div created="20201124000927970" modified="20211112162550700" tags="" title="Class Notes">
 <pre>A good part of this course will be based on the following, self-contained, [ext[notes|files/phys5201_notes.pdf]]. You can download them if you wish. Not all topics in this course are covered in the notes, so additional reading suggestions are given below.
 
 !!!! September 8 - 17: Chapter 1. Review of Thermodynamics
@@ -10773,21 +10773,25 @@ Additional notes have been uploaded (complex read):
 * Free electron gas. Schwabl, pages 176-188. [[Fermi surface of a free electron gas in d=3|https://image1.slideserve.com/3005774/slide17-l.jpg]]. [[A more complex Fermi surface|https://www.researchgate.net/profile/Pasquale_Marra3/publication/344294543/figure/download/fig3/AS:936954082361345@1600398669638/Fermi-surface-of-WP-in-the-first-Brillouin-zone-with-spinorbit-coupling-In-panels-a.ppm]].
 * Bose-Einstein condensation. Schwabl, pages 190-197.
 
-!!!! October 27 - October . Chapter 6. Fluctuations
+!!!! October 27 - November 1. Chapter 6. Fluctuations
 *  [ext[Class notes|files/phys5201_notes.pdf]], chapters 4.3 and 4.4 are an introduction to fluctuations within thermodynamics.
+
+!!!! November 1 - November 12. Chapter 7. Fluctuations of surfaces.
 * Statistical Mechanics treatment of fluctuations in the case of a fluctuating interface. [ext[Class notes|files/phys5201_notes.pdf]], chapter 5. We will cover this chapter in its entirety. It is probably a first example for you of several important concepts in this semester:
 ** A particular system in which fluctuations are not negligible, in fact they are dominant.
 ** A &quot;field theory calculation&quot;. The states are given by continuum functions and the partition function is therefore a functional integral.
 ** Anomalously large fluctuations tied to a broken symmetry.
 ** A few examples and movies have been uploaded in [[Chapter 6: Surface fluctuations|Animations - Chapter 6]].
-* Scattering experiments to measure correlation functions.  [ext[Class notes|files/phys5201_notes.pdf]], chapter 7.
+
+!!!! November 15. Chapter 8. Fluctuations and spontaneous broken symmetry
+*  [ext[Class notes|files/phys5201_notes.pdf]], chapter 6. 
 
 ---
 
-!!!! Chapter 7. Fluctuations and broken symmetry.
-*  [ext[Class notes|files/phys5201_notes.pdf]], chapter 6. 
+!!!! Chapter 9. Scattering experiments to measure correlation functions
+* [ext[Class notes|files/phys5201_notes.pdf]], chapter 7.
 
-!!!! Chapter 8. Phase transitions and critical phenomena.
+!!!! Chapter 10. Phase transitions and critical phenomena.
 * [ext[Class notes|files/phys5201_notes.pdf]], chapter 9.
 * See supplementary material for an Ising model applet.
 * [ext[Class notes|files/phys5201_notes.pdf]], chapter 10.
