--- a/index.html
+++ b/index.html
@@ -10298,7 +10298,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20211112162249600" list="Home" modified="20211112162249600" title="$:/StoryList">
+<div created="20211115160335700" list="Home" modified="20211115160335700" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20201030185022857" modified="20201030185022857" title="$:/theme">
@@ -10717,7 +10717,7 @@ and now the kinetic evolution at different levels of resolution
 * [[Chapter 6: Surface fluctuations|Animations - Chapter 6]].
 * [[Chapter 8: Phase transitions and critical phenomena|Animations - Chapter 8]].</pre>
 </div>
-<div created="20201124000927970" modified="20211112162550700" tags="" title="Class Notes">
+<div created="20201124000927970" modified="20211115160427000" tags="" title="Class Notes">
 <pre>A good part of this course will be based on the following, self-contained, [ext[notes|files/phys5201_notes.pdf]]. You can download them if you wish. Not all topics in this course are covered in the notes, so additional reading suggestions are given below.
 
 !!!! September 8 - 17: Chapter 1. Review of Thermodynamics
@@ -10786,10 +10786,10 @@ Additional notes have been uploaded (complex read):
 !!!! November 15. Chapter 8. Fluctuations and spontaneous broken symmetry
 *  [ext[Class notes|files/phys5201_notes.pdf]], chapter 6. 
 
----
-
-!!!! Chapter 9. Scattering experiments to measure correlation functions
+!!!! November 17. Chapter 9. Scattering experiments to measure correlation functions
 * [ext[Class notes|files/phys5201_notes.pdf]], chapter 7.
+
+---
 
 !!!! Chapter 10. Phase transitions and critical phenomena.
 * [ext[Class notes|files/phys5201_notes.pdf]], chapter 9.
