--- a/index.html
+++ b/index.html
@@ -213,6 +213,8 @@ Error message and password prompt
 
 <li>Homework 7 2019</li>
 
+<li>Homework 7 2021</li>
+
 <li>Homework 8 2019</li>
 
 <li>Supplementary Material</li>
@@ -10298,7 +10300,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20211115160335700" list="Home" modified="20211115160335700" title="$:/StoryList">
+<div created="20211117223939000" list="Home" modified="20211117225635600" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20201030185022857" modified="20201030185022857" title="$:/theme">
@@ -10802,14 +10804,15 @@ Additional notes have been uploaded (complex read):
 
 {{TableOfContents}}</pre>
 </div>
-<div created="20201123235906857" modified="20211111192115500" tags="" title="Homework">
+<div created="20201123235906857" modified="20211117224008000" tags="" title="Homework">
 <pre>!!!! Homeworks
 * [[Homework 1|Homework 1 2021]]. Due on September 29, 2021. Solutions: [ext[1.3|files/hwk_sol_1-3.pdf]].
 * [[Homework 2|Homework 2 2021]]. Due on October 6, 2021. Solutions: [ext[2.1|files/hwk_sol_2-1.pdf]], [ext[2.2|files/hwk_sol_2-2.pdf]], [ext[2.3|files/hwk_sol_2-3.pdf]].
 * [[Homework 3|Homework 3 2021]]. Due on October 13, 2021. Solutions: [ext[3.1|files/hwk_sol_3-1.pdf]], [ext[3.2|files/hwk_sol_3-2.pdf]], [ext[3.3|files/hwk_sol_3-3.pdf]], [ext[3.4|files/hwk_sol_3-4.pdf]].
 * [[Homework 4|Homework 4 2021]]. Due on October 20, 2021. Solutions: [ext[4.1|files/hwk_sol_4-1.pdf]], [ext[4.2|files/hwk_sol_4-2.pdf]].
 * [[Homework 5|Homework 5 2021]]. Due on November 3, 2021. Solutions: [ext[5.1|files/hwk_sol_5-1.pdf]], [ext[5.2|files/hwk_sol_5-2.pdf]], [ext[5.3|files/hwk_sol_5-3.pdf]].
-* [[Homework 6|Homework 6 2021]]. Due on November 17, 2021.</pre>
+* [[Homework 6|Homework 6 2021]]. Due on November 17, 2021.
+* [[Homework 7|Homework 7 2021]]. Due on November 24, 2021.</pre>
 </div>
 <div created="20201124000014789" modified="20201124000053683" title="Homework 1 2019">
 <pre>''Due Monday, September 23, 2019''
@@ -11507,6 +11510,49 @@ Show that the fluctuations in the component of the displacement parallel to the 
 \quad {\rm smectics.} 
 \end{eqnarray}
 We have introduced a large wavenumber cut-off $q_{c}$ beyond which this simplified descriptions break down, and $L$ is the linear size of the sample.</pre>
+</div>
+<div created="20211117224032000" modified="20211117230429200" title="Homework 7 2021">
+<pre>''Due Wednesday, November 24, 2021''
+
+!!!! Long range order in modulated systems
+
+Let $$\mathbf{u}(x,y,z)$$ be the vector displacement field in three different phases of matter: crystals, columnar phases, and smectic liquid crystals, all in three dimensions. A crystalline phase has a broken translational symmetry in all three directions. A columnar phase can be viewed as a crystal along two dimensions, and a fluid along the third. A smectic phase in a liquid crystal can be viewed as a sequence of stacked planes perpendicular to the so called director of the liquid crystal molecule.
+
+See [[image|http://barrett-group.mcgill.ca/tutorials/liquid_crystal/LC05.htm]] of a columnar phase. The columns align along $$z$$, and form a hexagonal lattice on the $$(x,y)$$ plane. The displacement $$\mathbf{u}_{\perp}$$ measures the distortions of the columns on this plane, as a function of position. The columns are disordered along $$z$$.
+
+An illustration of an smectic phase can be seen [[here|https://en.wikipedia.org/wiki/Liquid_crystal#/media/File:LiquidCrystal-MesogenOrder-SmecticPhases.jpg]]. The (scalar) displament $$u$$ gives the deviations in the stacking of the layers in the direction normal to the layer.
+
+If $$C$$ is the elastic modulus of each material, the energy of fluctuations in all three phases can be approximately written as
+$$
+E_{crystal} = \frac{C}{2} \int d^{3}x \left( \nabla \cdot \mathbf{u} \right)^{2}, \quad \mathbf{u}=(u_{x},u_{y},u_{z}),
+$$
+$$
+E_{columnar} = \frac{C}{2} \int d^{3}x \left[ \left(\nabla_{\perp} \cdot \mathbf{u}_{\perp}\right)^{2}  + \lambda^{2} \left( \partial_{z}^{2} \mathbf{u}_{\perp} \right)^{2} \right], \quad \mathbf{u}_{\perp}=(u_{x},u_{y}), \quad \nabla_{\perp} = (\partial_{x},\partial_{y})
+$$
+$$
+E_{smectic} =  \frac{C}{2} \int d^{3}x \left[ \left( \partial_{z}u \right)^{2} + \lambda^{2} \left( \nabla_{\perp}^{2}u \right)^{2} \right], \quad \nabla_{\perp}u = (\partial_{x}u,\partial_{y}u). 
+$$
+In these equations, $$\mathbf{u}$$ is the three dimensional displacement field in a crystal, $$\mathbf{u}_{\perp}$$ is a two dimensional displacement field of the columnar phase on the plane where there is crystalline order, whereas $$u$$ is a scalar field that describes the modulation of the smectic planes.
+
+Show that the fluctuations in the component of the displacement parallel to the wavevector of the fluctuation $$(u = \hat{k}\cdot\mathbf{u}$$ where appropriate):
+
+$$
+\langle u^{2} \rangle = \frac{k_{B}T q_{c}}{2 \pi^{2} C} \quad\quad
+{\rm for ~ crystals,}
+$$
+
+$$
+\langle u^{2} \rangle = \frac{k_{B}T \sqrt{q_{c}/\lambda}}{2 \pi^{2} C}
+\quad {\rm for ~ columnar ~ phases,}
+$$
+
+$$
+\langle u^{2} \rangle  \approx  \frac{k_{B}T \ln (q_{c}L)}{4 \pi
+\lambda C} 
+\quad {\rm for ~ smectics.} 
+$$
+
+We have introduced a large wavenumber cut-off $$q_{c}$$ beyond which this simplified descriptions break down, and $$L$$ is the linear size of the sample.</pre>
 </div>
 <div created="20201124000816923" modified="20201124000847836" title="Homework 8 2019">
 <pre>{{justifyright{
