--- a/index.html
+++ b/index.html
@@ -10300,7 +10300,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20211119125001200" list="Home" modified="20211119125001200" title="$:/StoryList">
+<div created="20211124162947000" list="Home" modified="20211124163403900" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20201030185022857" modified="20201030185022857" title="$:/theme">
@@ -10719,7 +10719,7 @@ and now the kinetic evolution at different levels of resolution
 * [[Chapter 6: Surface fluctuations|Animations - Chapter 6]].
 * [[Chapter 8: Phase transitions and critical phenomena|Animations - Chapter 8]].</pre>
 </div>
-<div created="20201124000927970" modified="20211115160427000" tags="" title="Class Notes">
+<div created="20201124000927970" modified="20211124163353400" tags="" title="Class Notes">
 <pre>A good part of this course will be based on the following, self-contained, [ext[notes|files/phys5201_notes.pdf]]. You can download them if you wish. Not all topics in this course are covered in the notes, so additional reading suggestions are given below.
 
 !!!! September 8 - 17: Chapter 1. Review of Thermodynamics
@@ -10788,14 +10788,16 @@ Additional notes have been uploaded (complex read):
 !!!! November 15. Chapter 8. Fluctuations and spontaneous broken symmetry
 *  [ext[Class notes|files/phys5201_notes.pdf]], chapter 6. 
 
-!!!! November 17. Chapter 9. Scattering experiments to measure correlation functions
+!!!! November 17 - November 19. Chapter 9. Scattering experiments to measure correlation functions
 * [ext[Class notes|files/phys5201_notes.pdf]], chapter 7.
+
+!!!! November 22 - November 24. Chapter 10. Phase transitions and critical phenomena.
+* Introduction to Ising model. Simulation in two dimensions (see supplementary material for link to the Ising model shown in class).
+* Exact solution for the Ising model in one spatial dimension [ext[Class notes|files/phys5201_notes.pdf]], chapter 9.
 
 ---
 
 !!!! Chapter 10. Phase transitions and critical phenomena.
-* [ext[Class notes|files/phys5201_notes.pdf]], chapter 9.
-* See supplementary material for an Ising model applet.
 * [ext[Class notes|files/phys5201_notes.pdf]], chapter 10.
 * Scaling Theory. [ext[Class notes|files/phys5201_notes.pdf]], chapter 11.</pre>
 </div>
