--- a/index.html
+++ b/index.html
@@ -217,6 +217,8 @@ Error message and password prompt
 
 <li>Homework 8 2019</li>
 
+<li>Homework 8 2021</li>
+
 <li>Supplementary Material</li>
 
 <li>Supplementary Reading</li>
@@ -10291,7 +10293,7 @@ Error message and password prompt
 <div created="20201123235647015" modified="20201123235701897" title="$:/SiteTitle">
 <pre>PHYS 5201. Thermal and Statistical Physics</pre>
 </div>
-<div created="20210627203342865" modified="20211027220043100" title="$:/state/sidebar">
+<div created="20210627203342865" modified="20211201185602200" title="$:/state/sidebar">
 <pre>no</pre>
 </div>
 <div created="20210902201946614" modified="20210902201946614" title="$:/state/tab/sidebar--595412856">
@@ -10300,7 +10302,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20211124162947000" list="Home" modified="20211124163403900" title="$:/StoryList">
+<div created="20211201185239400" list="Home" modified="20211201192033300" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20201030185022857" modified="20201030185022857" title="$:/theme">
@@ -10719,7 +10721,7 @@ and now the kinetic evolution at different levels of resolution
 * [[Chapter 6: Surface fluctuations|Animations - Chapter 6]].
 * [[Chapter 8: Phase transitions and critical phenomena|Animations - Chapter 8]].</pre>
 </div>
-<div created="20201124000927970" modified="20211124163353400" tags="" title="Class Notes">
+<div created="20201124000927970" modified="20211201192535400" tags="" title="Class Notes">
 <pre>A good part of this course will be based on the following, self-contained, [ext[notes|files/phys5201_notes.pdf]]. You can download them if you wish. Not all topics in this course are covered in the notes, so additional reading suggestions are given below.
 
 !!!! September 8 - 17: Chapter 1. Review of Thermodynamics
@@ -10778,7 +10780,7 @@ Additional notes have been uploaded (complex read):
 !!!! October 27 - November 1. Chapter 6. Fluctuations
 *  [ext[Class notes|files/phys5201_notes.pdf]], chapters 4.3 and 4.4 are an introduction to fluctuations within thermodynamics.
 
-!!!! November 1 - November 12. Chapter 7. Fluctuations of surfaces.
+!!!! November 1 - November 12. Chapter 7. Fluctuations of surfaces
 * Statistical Mechanics treatment of fluctuations in the case of a fluctuating interface. [ext[Class notes|files/phys5201_notes.pdf]], chapter 5. We will cover this chapter in its entirety. It is probably a first example for you of several important concepts in this semester:
 ** A particular system in which fluctuations are not negligible, in fact they are dominant.
 ** A &quot;field theory calculation&quot;. The states are given by continuum functions and the partition function is therefore a functional integral.
@@ -10791,22 +10793,24 @@ Additional notes have been uploaded (complex read):
 !!!! November 17 - November 19. Chapter 9. Scattering experiments to measure correlation functions
 * [ext[Class notes|files/phys5201_notes.pdf]], chapter 7.
 
-!!!! November 22 - November 24. Chapter 10. Phase transitions and critical phenomena.
+!!!! November 22 - November 29. Chapter 10. Phase transitions and critical phenomena
 * Introduction to Ising model. Simulation in two dimensions (see supplementary material for link to the Ising model shown in class).
 * Exact solution for the Ising model in one spatial dimension [ext[Class notes|files/phys5201_notes.pdf]], chapter 9.
 
----
+!!!! December 1. Chapter 10. Phase transitions and critical phenomena
+* Landau argument for lack of long range order in one dimension ([ext[Class notes|files/phys5201_notes.pdf]]).
+* Mean field approximation for the Ising model. [ext[Class notes|files/phys5201_notes.pdf]].
 
-!!!! Chapter 10. Phase transitions and critical phenomena.
-* [ext[Class notes|files/phys5201_notes.pdf]], chapter 10.
-* Scaling Theory. [ext[Class notes|files/phys5201_notes.pdf]], chapter 11.</pre>
+!!!! December 3. Chapter 10. Phase transitions and critical phenomena.
+* Susceptility of the mean field approximation. Critical exponents. Spin correlation function [ext[Class notes|files/phys5201_notes.pdf]].
+* $$\phi^{4}$$ field theory for the Ising model [ext[Class notes|files/phys5201_notes.pdf]], chapter 11.</pre>
 </div>
 <div created="20201123235750313" modified="20211018151951200" title="Home">
 <pre>[img[files/PANO_20130902_180940_rotated2.jpg]]
 
 {{TableOfContents}}</pre>
 </div>
-<div created="20201123235906857" modified="20211119125033100" tags="" title="Homework">
+<div created="20201123235906857" modified="20211201185414100" tags="" title="Homework">
 <pre>!!!! Homeworks
 * [[Homework 1|Homework 1 2021]]. Due on September 29, 2021. Solutions: [ext[1.3|files/hwk_sol_1-3.pdf]].
 * [[Homework 2|Homework 2 2021]]. Due on October 6, 2021. Solutions: [ext[2.1|files/hwk_sol_2-1.pdf]], [ext[2.2|files/hwk_sol_2-2.pdf]], [ext[2.3|files/hwk_sol_2-3.pdf]].
@@ -10814,7 +10818,8 @@ Additional notes have been uploaded (complex read):
 * [[Homework 4|Homework 4 2021]]. Due on October 20, 2021. Solutions: [ext[4.1|files/hwk_sol_4-1.pdf]], [ext[4.2|files/hwk_sol_4-2.pdf]].
 * [[Homework 5|Homework 5 2021]]. Due on November 3, 2021. Solutions: [ext[5.1|files/hwk_sol_5-1.pdf]], [ext[5.2|files/hwk_sol_5-2.pdf]], [ext[5.3|files/hwk_sol_5-3.pdf]].
 * [[Homework 6|Homework 6 2021]]. Due on November 17, 2021. Solutions: [ext[6.1|files/hwk_sol_6-1.pdf]], [ext[6.2|files/hwk_sol_6-2.pdf]], [ext[6.3|files/hwk_sol_6-3.pdf]].
-* [[Homework 7|Homework 7 2021]]. Due on November 24, 2021.</pre>
+* [[Homework 7|Homework 7 2021]]. Due on November 24, 2021. Solution: [ext[7|files/hwk_sol_7.pdf]]
+* [[Homework 8|Homework 8 2021]]. Due on December 8, 2021.</pre>
 </div>
 <div created="20201124000014789" modified="20201124000053683" title="Homework 1 2019">
 <pre>''Due Monday, September 23, 2019''
@@ -11607,6 +11612,51 @@ In this expression, $\eta^{l}(\mathbf{x})$ captures the so called &quot;longitud
 $$
 where $\alpha$ and $\beta$ stand for either longitudinal $l$, or transverse $t$ amplitudes.
 # Discuss the dependence of the longitudinal and transverse scattering intensities on $k$, both in the paramagnetic phase ($r &gt; 0$) and in the ferromagnetic phase ($r &lt; 0$).</pre>
+</div>
+<div created="20211201185518900" modified="20211201192002900" title="Homework 8 2021">
+<pre>''Due Wednesday, December 8, 2021''
+
+!!!! Question 1. Hubbard-Stratonovich transformation: the infinite range Ising model
+A rare analytic solution to an interacting system involves the infinite-range Ising model of a ferromagnet. Of course, the model is somewhat artificial. Consider spins $$S_i = \pm 1$$ that are located on $$i=1, 2, \ldots N$$ sites of a regular lattice. All spins interact equally with each other, through a positive coupling constant $$J_\infty$$.  There is also a constant external magnetic field $$H$$ which tends to align the spins in the direction (sign) of the field.  The energy of interaction for the system is $$
+E = - \frac{J_\infty}{2} \sum_{i=1}^N \sum_{j=1}^N S_i S_j
+- H \sum_{i=1}^N S_i,
+$$
+and the partition function is $$
+Z = \sum_{S_1 = -1}^{+1} \sum_{S_2 = -1}^{+1} \cdots \sum_{S_N = -1}^{+1} e^{-E/k_B T}. 
+$$ 
+where $$k_B$$ is Boltzmann's constant and $$T$$ is temperature. This model has a second order phase transition: For $$H=0$$ and low temperatures, spins are aligned on average, giving rise to a nonzero magnetization. At high temperatures they are randomly oriented, giving no net magnetization. A phase transition occurs at a particular critical temperature $$T_c$$.
+
+# The fact that all spins interact with each other with equal strength (without regard to how far apart the spins may be) is artificial. For example, why does the model only make sense if $$J_\infty =J / N$$, where $$J$$ is a constant independent of $$N$$?
+# In any case, the model has value because it can be solved exactly. One can do all the sums in the partition function by the method known variously as the Hubbard-Stratonovich transformation, or as auxiliary fields, or as the Martin-Siggia-Rose representation, or as &quot;completing the square&quot;. To get started, prove the trivial (but easily generalizable) identity  $$ 
+\exp{\frac{a}{2N}x^2} = \int_{-\infty}^{\infty} \frac{dy}{\sqrt{2\pi/Na}}  e^{-\frac{Na}{2}y^2 +axy} 
+$$  where Re $$a &gt;0$$. Note that the quadratic dependence on $$x$$ in the exponential has been reduced to a linear dependence on $$x$$; the price being the introduction of a new variable $$y$$. Note that one can introduce a similar transformation for vectors $$\mathbf{x}$$ and $$\mathbf{y}$$ in which case $$a$$ is a matrix, or a continuous field $$y(x)$$, in which case $$a$$ becomes more complex.
+# Show that the partition function for the system above is $$
+Z = \int_{-\infty}^{\infty} \frac{dy}{\sqrt{2\pi k_BT/N J}} e^{-N L(y)/k_BT}
+$$ (as a hint, let $$x = \sum_{i=1}^N S_i$$), and $$
+L = \frac{J}{2} y^2 - k_BT \ln \left(2 \cosh(H + Jy)/k_BT \right).
+$$ Hence the sums in the partition function have been replaced by an integral over the auxiliary variable $$y$$.
+# In the thermodynamic limit, $$N\rightarrow \infty$$, show that the partition function can be evaluated exactly (called a saddle-point evaluation) as $$
+Z = \sum_\alpha \exp \left( - N L(H, J, T, y_\alpha\right)/k_BT.
+$$ Find the equation satisfied by  $$y_\alpha$$, and explain what the index $$\alpha$$ is. What is the probability of being in the state specified by $$y_\alpha$$?  Show that the magnetization per spin is $$
+M = \frac{k_BT}{N} \frac{{\partial \ln Z}}{{\partial H}} = y_0,
+$$ where $$y_0$$ is the position of the global minimum of $$L$$.
+# Solve for $$y_\alpha$$ graphically for $$H = 0$$.  Show there is a phase transition, and find $$T_c$$. Discuss the stability of solutions for $$y_\alpha$$ above and below $$T_c$$. 
+# Calculate the isothermal susceptibility $$\chi_T = \partial M/\partial H$$. For $$H=0$$ show that $$\chi_T$$ diverges to infinity both above and below $$T_c$$, and find the leading and next to leading behavior of $$\chi_T$$ in terms of the reduced temperature $$t= (T-T_c)/T_c$$.
+
+!!!! Question 2. n-vector model.
+Consider a vector magnetization field of $$n$$ components $$\mathbf{m}(\mathbf{x}) = (m_{1}(\mathbf{x}), m_{2}(\mathbf{x}), \ldots , m_{n}(\mathbf{x}))$$, where $$\mathbf{x}$$ is a point in $$d$$-dimensional space. The interaction energy is a simple extension of the $$\phi^{4}$$ energy,
+$$
+E\{ \mathbf{m}(\mathbf{x})\} = \int d^{d} \mathbf{x} \; \left[ \frac{K}{2} \sum_{i,j} \left( \partial_{i} m_{j} \right) \left( \partial_{i} m_{j} \right) + \frac{r}{2} (\mathbf{m})^{2} + u (\mathbf{m})^{4} \right] ,
+$$
+where $$\partial_{i}$$ stands for $$\partial/\partial x_{i}$$.
+
+# In the absence of fluctuations, the equilibrium configuration is spatially uniform and minimizes $$E$$. Let $$\mathbf{e}_{1}$$ be an arbitrary unit vector along the direction of the equilibrium magnetization, then the equilibrium magnetization is given by $$\mathbf{m}_{0} = m_{0} \mathbf{e}_{1}$$. Find $$m_{0}$$.
+# In order to study fluctuations around $$\mathbf{m}_{0}$$, we introduce the decomposition $$
+\mathbf{m}(\mathbf{x}) = \left( m_{0} + \eta^{l}(\mathbf{x}) \right) \mathbf{e}_{1} + \sum_{j=2}^{n} \eta^{t}_{j}(\mathbf{x}) \mathbf{e}_{j}.
+$$ In this expression, $$\eta^{l}(\mathbf{x})$$ captures the so called &quot;longitudinal fluctuations&quot;, i.e., those along the same direction as the equilibrium, uniform state, and $$\eta^{t}(\mathbf{x})$$ are &quot;transverse fluctuations&quot;, in the directions perpendicular to the equilibrium state, along unit vectors $$\mathbf{e}_{j}$$. Calculate the energy of the fluctuations, only up to quadratic order in the amplitudes $$\eta^{l}$$ and $$\eta^{t}_{j}$$. You may need the relation $$(a + \epsilon)^{4} \approx a^{4} + 4 a^{3} \epsilon + 6 a^{2} \epsilon^{2} + {\it O}(\epsilon^{3})$$ for small $$\epsilon$$.
+# From the energy derived, compute the fluctuation scattering intensity $$ \langle \eta^{\alpha}(\mathbf{k}) \eta^{\beta}(-\mathbf{k}) \rangle,
+$$ where $$\alpha$$ and $$\beta$$ stand for either longitudinal $$l$$, or transverse $$t$$ amplitudes.
+# Discuss the dependence of the longitudinal and transverse scattering intensities on $$k$$, both in the paramagnetic phase ($$r &gt; 0$$) and in the ferromagnetic phase ($$r &lt; 0$$).</pre>
 </div>
 <div created="20201124001012120" modified="20201124001030085" tags="" title="Supplementary Material">
 <pre>* [[Animations and Simulations]]
