--- a/index.html
+++ b/index.html
@@ -179,9 +179,11 @@ Error message and password prompt
 
 <li>Animations - Chapter 8</li>
 
-<li>Animations and Simulations</li>
-
 <li>Class Notes</li>
+
+<li>Experiments - Chapter 8</li>
+
+<li>Graphs, Animations and Simulations</li>
 
 <li>Home</li>
 
@@ -10293,16 +10295,16 @@ Error message and password prompt
 <div created="20201123235647015" modified="20201123235701897" title="$:/SiteTitle">
 <pre>PHYS 5201. Thermal and Statistical Physics</pre>
 </div>
-<div created="20210627203342865" modified="20211201185602200" title="$:/state/sidebar">
+<div created="20210627203342865" modified="20211210004519500" title="$:/state/sidebar">
 <pre>no</pre>
 </div>
-<div created="20210902201946614" modified="20210902201946614" title="$:/state/tab/sidebar--595412856">
-<pre>TableOfContents</pre>
+<div created="20210902201946614" modified="20211210004513200" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20211201185239400" list="Home" modified="20211201192033300" title="$:/StoryList">
+<div created="20211210004731700" list="Home" modified="20211210004804100" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20201030185022857" modified="20201030185022857" title="$:/theme">
@@ -10714,13 +10716,6 @@ and now the kinetic evolution at different levels of resolution
 
 &lt;iframe width=&quot;723&quot; height=&quot;407&quot; src=&quot;https://www.youtube.com/embed/PlvisNlAcfo&quot; title=&quot;YouTube video player&quot; frameborder=&quot;0&quot; allow=&quot;accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture&quot; allowfullscreen&gt;&lt;/iframe&gt;</pre>
 </div>
-<div created="20201124001046684" modified="20201124001048385" title="Animations and Simulations">
-<pre>* [[Chapter 1: Review of Thermodynamics|Animations - Chapter 1]].
-* [[Chapter 2: Review of Statistical Mechanics|Animations - Chapter 2]].
-* Chapter 4. [[Cosmic Microwave background|https://en.wikipedia.org/wiki/Cosmic_microwave_background#/media/File:Cmbr.svg]] and Planck's law.
-* [[Chapter 6: Surface fluctuations|Animations - Chapter 6]].
-* [[Chapter 8: Phase transitions and critical phenomena|Animations - Chapter 8]].</pre>
-</div>
 <div created="20201124000927970" modified="20211201192535400" tags="" title="Class Notes">
 <pre>A good part of this course will be based on the following, self-contained, [ext[notes|files/phys5201_notes.pdf]]. You can download them if you wish. Not all topics in this course are covered in the notes, so additional reading suggestions are given below.
 
@@ -10804,6 +10799,20 @@ Additional notes have been uploaded (complex read):
 !!!! December 3. Chapter 10. Phase transitions and critical phenomena.
 * Susceptility of the mean field approximation. Critical exponents. Spin correlation function [ext[Class notes|files/phys5201_notes.pdf]].
 * $$\phi^{4}$$ field theory for the Ising model [ext[Class notes|files/phys5201_notes.pdf]], chapter 11.</pre>
+</div>
+<div created="20211210005135100" modified="20211210011320900" title="Experiments - Chapter 8">
+<pre>* Density difference at fluid-gas critical point [[Guggenheim (1945)|https://html.scirp.org/file/4-8302313x22.png]]. $$\beta = 1/3$$ regardless of the gas. Just scale each gas' individual critical point.
+* Isothermal compressibility of a (two dimensional) fluid film [[Kim and Cannell (1976)|http://homepages.spa.umn.edu/~vinals/classes/phys5201/notes/Film_compressibility_Cannell.png]]. Fluid monolayer has mean field exponent $$\gamma = 1$$.
+* Critical scattering from Argon [[Fisher (1967)|http://homepages.spa.umn.edu/~vinals/classes/phys5201/notes/CriticalScatteringArgon_Fisher.png]].
+* Specific Heat of Liquid He [[Lipa (2003)|http://homepages.spa.umn.edu/~vinals/classes/phys5201/notes/SpecificHeatHe_Lipa.png]]. Measurement onboard Space Shuttle.</pre>
+</div>
+<div created="20201124001046684" modified="20211210004720100" title="Graphs, Animations and Simulations">
+<pre>* [[Chapter 1: Review of Thermodynamics|Animations - Chapter 1]].
+* [[Chapter 2: Review of Statistical Mechanics|Animations - Chapter 2]].
+* Chapter 4. [[Cosmic Microwave background|https://en.wikipedia.org/wiki/Cosmic_microwave_background#/media/File:Cmbr.svg]] and Planck's law.
+* [[Chapter 6: Surface fluctuations|Animations - Chapter 6]].
+* [[Chapter 8: Critical Phenomena - experiments|Experiments - Chapter 8]].
+* [[Chapter 8: Phase transitions and critical phenomena|Animations - Chapter 8]].</pre>
 </div>
 <div created="20201123235750313" modified="20211018151951200" title="Home">
 <pre>[img[files/PANO_20130902_180940_rotated2.jpg]]
@@ -11658,8 +11667,8 @@ $$ In this expression, $$\eta^{l}(\mathbf{x})$$ captures the so called &quot;lon
 $$ where $$\alpha$$ and $$\beta$$ stand for either longitudinal $$l$$, or transverse $$t$$ amplitudes.
 # Discuss the dependence of the longitudinal and transverse scattering intensities on $$k$$, both in the paramagnetic phase ($$r &gt; 0$$) and in the ferromagnetic phase ($$r &lt; 0$$).</pre>
 </div>
-<div created="20201124001012120" modified="20201124001030085" tags="" title="Supplementary Material">
-<pre>* [[Animations and Simulations]]
+<div created="20201124001012120" modified="20211210004431800" tags="" title="Supplementary Material">
+<pre>* [[Graphs, Animations and Simulations]]
 * [[Supplementary Reading]]</pre>
 </div>
 <div created="20201124001457195" modified="20211105201753700" title="Supplementary Reading">
