--- a/index.html
+++ b/index.html
@@ -10304,7 +10304,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20211210004731700" list="Home" modified="20211210004804100" title="$:/StoryList">
+<div created="20211213194015500" list="Home" modified="20211213194015500" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20201030185022857" modified="20201030185022857" title="$:/theme">
@@ -10819,7 +10819,7 @@ Additional notes have been uploaded (complex read):
 
 {{TableOfContents}}</pre>
 </div>
-<div created="20201123235906857" modified="20211201185414100" tags="" title="Homework">
+<div created="20201123235906857" modified="20211213194051900" tags="" title="Homework">
 <pre>!!!! Homeworks
 * [[Homework 1|Homework 1 2021]]. Due on September 29, 2021. Solutions: [ext[1.3|files/hwk_sol_1-3.pdf]].
 * [[Homework 2|Homework 2 2021]]. Due on October 6, 2021. Solutions: [ext[2.1|files/hwk_sol_2-1.pdf]], [ext[2.2|files/hwk_sol_2-2.pdf]], [ext[2.3|files/hwk_sol_2-3.pdf]].
@@ -10828,7 +10828,7 @@ Additional notes have been uploaded (complex read):
 * [[Homework 5|Homework 5 2021]]. Due on November 3, 2021. Solutions: [ext[5.1|files/hwk_sol_5-1.pdf]], [ext[5.2|files/hwk_sol_5-2.pdf]], [ext[5.3|files/hwk_sol_5-3.pdf]].
 * [[Homework 6|Homework 6 2021]]. Due on November 17, 2021. Solutions: [ext[6.1|files/hwk_sol_6-1.pdf]], [ext[6.2|files/hwk_sol_6-2.pdf]], [ext[6.3|files/hwk_sol_6-3.pdf]].
 * [[Homework 7|Homework 7 2021]]. Due on November 24, 2021. Solution: [ext[7|files/hwk_sol_7.pdf]]
-* [[Homework 8|Homework 8 2021]]. Due on December 8, 2021.</pre>
+* [[Homework 8|Homework 8 2021]]. Due on December 8, 2021. Solutions: [ext[8.1|files/hwk_sol_8-1.pdf]], [ext[8.2|files/hwk_sol_8-2.pdf]].</pre>
 </div>
 <div created="20201124000014789" modified="20201124000053683" title="Homework 1 2019">
 <pre>''Due Monday, September 23, 2019''
